libsdl2 (2.0.8+dfsg1-5) UNRELEASED; urgency=medium

  * Bump Policy Standards-Version to 4.2.1 (no changes needed)
  * d/rules: include /usr/share/dpkg/architecture.mk and .../pkg-info.mk
    to provide DEB_HOST_ARCH_CPU, DEB_HOST_MULTIARCH and
    SOURCE_DATE_EPOCH, instead of getting them through shell invocations.
  * d/watch: Switch to version=4
  * Switch to debhelper compat level v11
  * d/patches:
    - add fix-cross-building-907711.patch to fix cross-building by using
      the right pkg-config depending on the architecture (Closes: #907711)
      Thanks Helmut Grohne for the report and the patch.

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Sat, 20 Oct 2018 11:45:40 +0200

libsdl2 (2.0.8+dfsg1-4) unstable; urgency=medium

  * Team upload
  * Update copyright file.
  * Ack previous NMU thanks!
  * Also add the testsuite from test directory (from bug #909778)
    - we need to find an approach to also run the resulting binaries
      automatically

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 01 Oct 2018 12:54:23 +0200

libsdl2 (2.0.8+dfsg1-3.1) unstable; urgency=medium

  * Non-maintainer upload.
  * d/tests/build: Add autopkgtest to check that dynamic linking with
    either pkg-config or sdl2-config works correctly
  * Revert "Make libsdl2-dev coinstallable again"
    (Closes: #909778) (reopens: #909740)

 -- Simon McVittie <smcv@debian.org>  Sun, 30 Sep 2018 16:13:38 +0100

libsdl2 (2.0.8+dfsg1-3) unstable; urgency=medium

  [ Hugh McMaster <hugh.mcmaster@outlook.com> ]
  * Make libsdl2 coinstallable again (Closes: #909740).

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 27 Sep 2018 16:21:47 +0200

libsdl2 (2.0.8+dfsg1-2) unstable; urgency=medium

  [ Felix Geyer ]
  * Remove Multi-Arch: same from libsdl2-dev as SDL_config.h is architecture
    dependent.

  [ Gianfranco Costamagna ]
  * Team upload
  * Enable vulkan everywhere
  * debian/patches/SDL2-dynapi-symbol-resolution-fix.patch: