@@ -6,6 +6,7 @@ libsdl2 (2.0.8+dfsg1-5) UNRELEASED; urgency=medium
     SOURCE_DATE_EPOCH, instead of getting them through shell invocations.
   * d/watch: Switch to version=4
   * Switch to debhelper compat level v11
+    - Force examples to be installed in libsdl2-doc
   * d/patches:
     - add fix-cross-building-907711.patch to fix cross-building by using
       the right pkg-config depending on the architecture (Closes: #907711)
